# Labor-Algorithmen

./: CMakeLists.txt  argprint.c  rahmen.c
1. Woche/: double_num.c  rand_seq.c  reverse_str.c
10. Woche/: fourInARow.c
2. Woche/: list.c  list.h
4. Woche/: mysort.c  mysort.h  mystat.c  mystat.h
5. Woche/: labsolve.c
7. Woche/: mysort.c
9. Woche/: binBaum.c
Aufgaben Vorlesung/: divide_and_conquer.c  dynamisch.c  fibonacci.c
