cmake_minimum_required(VERSION 3.16)
project(Labor-Algorithmen C)

set(CMAKE_C_STANDARD 11)

add_executable(VierGewinnt "10. Woche/fourInARow.c")
#add_executable(binBaum "9. Woche/binBaum.c")
#add_executable(sort "7. Woche/mysort.c")
#add_executable(labsolve "5. Woche/labsolve.c")
#add_executable(fibonacci "Aufgaben Vorlesung/fibonacci.c")
#add_executable(divide "Aufgaben Vorlesung/divide_and_conquer.c")
#add_executable(dynamisch "Aufgaben Vorlesung/dynamisch.c")
#add_executable(mysort  "4. Woche/mysort.c")
#add_executable(mystat  "4. Woche/mystat.c")
#add_executable(Labor-Algorithmen "2. Woche/list.c")
#add_executable(reverse "1. Woche/reverse_str.c")
#add_executable(double "1. Woche/double_num.c")
#add_executable(rand "1. Woche/rand_seq.c")
